k8s/webapi.yml
kind: Service
apiVersion: v1
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  selector:
    app: webapi
  ports:
  - protocol: TCP
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: public.ecr.aws/k1f0b0q8/github-actions:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
