k8s/ingress-eks.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
    component: frontend
  name: ingress-webapi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /webapi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 80
