k8s/ingress-minikube.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress
    component: frontend
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 80
